--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <h1>Aula HTML</h1>
     <p>Segunda aula sbre HTML.</p>
 
+    <h2>Adicionando imagem</h2>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML"> </a><img src="img/download.jpg" alt="filme rio">
+
+    <h2>Adicionando link</h2>
+    <p>Faça uma busca no <a target="_blank" href="https://www.google.com.br"> google! </a></p>
 </body>
 </html>
